# MPCKOBUKI

./: graficas.asv  graficas.m  reference.txt  results.txt
src/testes/: CMakeLists.txt  package.xml
src/testes/config/: config.yaml
src/testes/include/testes/: pred_control.h  trajectory.hpp
src/testes/src/: pred_control.cpp  testosqp.cpp  trajectory.cpp
src/testes/src/matlab/: Path.m  main.m  pred_control.m
